Improvements to File Size Optimization

--- a/src/main/resources/assets/creatoroverlays/lang/en_us.json
+++ b/src/main/resources/assets/creatoroverlays/lang/en_us.json
@@ -3,8 +3,14 @@
   "key.creatoroverlays.display_ro3overlay": "Toggle Rule Of Thirds Gridlines",
   "key.creatoroverlays.display_groverlay": "Toggle Golden Ratio Overlay",
   "key.creatoroverlays.display_vvoverlay": "Toggle Vertical Video Overlay",
+  "key.creatoroverlays.display_tpoverlay": "Toggle Tracking Points Overlay",
   "key.creatoroverlays.co_color": "Cycle Overlay Colors",
-  "key.creatoroverlays.co_rotateup":  "Rotate Overlay Up",
-  "key.creatoroverlays.co_rotatedown": "Rotate Overlay Down"
+  "key.creatoroverlays.co_rotateup":  "Cycle Overlay States Up",
+  "key.creatoroverlays.co_rotatedown": "Cycle Overlays States Down",
+  "key.creatoroverlays.tp_up": "Move Tracking Point Up",
+  "key.creatoroverlays.tp_down": "Move Tracking Point Down",
+  "key.creatoroverlays.tp_right": "Move Tracking Point Right",
+  "key.creatoroverlays.tp_left": "Move Tracking Point Left",
+  "key.creatoroverlays.co_modifier": "Modifier Key"
 
 }
