--- a/src/main/resources/assets/creatoroverlays/lang/ru_ru.json
+++ b/src/main/resources/assets/creatoroverlays/lang/ru_ru.json
@@ -7,10 +7,10 @@
   "key.creatoroverlays.co_color": "Цвет кругового наложения",
   "key.creatoroverlays.co_rotateup":  "Выбор следующего кругового наложения",
   "key.creatoroverlays.co_rotatedown": "Выбор предыдущего кругового наложения",
-  "key.creatoroverlays.tp_up": "Передвинуть точку слежения вверх",
-  "key.creatoroverlays.tp_down": "Передвинуть точку слежения вниз",
-  "key.creatoroverlays.tp_right": "Передвинуть точку слежения вправо",
-  "key.creatoroverlays.tp_left": "Передвинуть точку слежения влево",
+  "key.creatoroverlays.co_up": "Передвинуть точку слежения вверх",
+  "key.creatoroverlays.co_down": "Передвинуть точку слежения вниз",
+  "key.creatoroverlays.co_right": "Передвинуть точку слежения вправо",
+  "key.creatoroverlays.co_left": "Передвинуть точку слежения влево",
   "key.creatoroverlays.co_modifier": "Ключ модификатора"
 
 }
