--- a/src/main/resources/assets/creatoroverlays/lang/tt_ru.json
+++ b/src/main/resources/assets/creatoroverlays/lang/tt_ru.json
@@ -9,10 +9,10 @@
   "key.creatoroverlays.co_color": "Түгәрәк каплавының төсләре",
   "key.creatoroverlays.co_rotateup":  "Түгәрәк каплавыныңны өскә бору",
   "key.creatoroverlays.co_rotatedown": "Түгәрәк каплауларының аска бору",
-  "key.creatoroverlays.tp_up": "Күзәтеп бару ноктасын өскә күчү",
-  "key.creatoroverlays.tp_down": "Күзәтеп бару ноктасын аска күчү",
-  "key.creatoroverlays.tp_right": "Күзәтеп бару ноктасын уңга күчү",
-  "key.creatoroverlays.tp_left": "Күзәтеп бару ноктасын сулга күчү",
+  "key.creatoroverlays.co_up": "Күзәтеп бару ноктасын өскә күчү",
+  "key.creatoroverlays.co_down": "Күзәтеп бару ноктасын аска күчү",
+  "key.creatoroverlays.co_right": "Күзәтеп бару ноктасын уңга күчү",
+  "key.creatoroverlays.co_left": "Күзәтеп бару ноктасын сулга күчү",
   "key.creatoroverlays.co_modifier": "Үзгәртүче ачкычы"
 
 }
