--- a/src/main/resources/assets/creatoroverlays/lang/tt_ru.json
+++ b/src/main/resources/assets/creatoroverlays/lang/tt_ru.json
@@ -1,14 +1,14 @@
 {
-  "modmenu.descriptionTranslation.creatoroverlays": "Бу мод композицияне оештыру белән контент ясаучыларга ярдәм итү өчен уендагы HUD-га каплаулар өемен өсти!",
-  "modmenu.summaryTranslation.creatoroverlays": "Контент ясаучыларга ярдәм итү өчен каплаулар өемен өсти!",
+  "modmenu.descriptionTranslation.creatoroverlays": "Бу мод композицияне оештыру белән контент ясаучыларга ярдәм итү өчен уендагы HUD-га капламнар өемен өсти!",
+  "modmenu.summaryTranslation.creatoroverlays": "Контент ясаучыларга ярдәм итү өчен капламнар өемен өсти!",
   "key.category.creatoroverlays.creatoroverlays": "Creator Overlays",
-  "key.creatoroverlays.display_ro3overlay": "Өчтән өч өлеш кагыйдәсе каплавын күчерү",
-  "key.creatoroverlays.display_groverlay": "Алтын киселеш каплавын күчерү",
-  "key.creatoroverlays.display_vvoverlay": "Вертикаль видео каплавын күчерү",
-  "key.creatoroverlays.display_tpoverlay": "Күзәтеп бару нокталары каплавын күчерү",
-  "key.creatoroverlays.co_color": "Түгәрәк каплавының төсләре",
-  "key.creatoroverlays.co_rotateup":  "Түгәрәк каплавыныңны өскә бору",
-  "key.creatoroverlays.co_rotatedown": "Түгәрәк каплауларының аска бору",
+  "key.creatoroverlays.display_ro3overlay": "Өчтән өч өлеш кагыйдәсе капламын күчерү",
+  "key.creatoroverlays.display_groverlay": "Алтын киселеш капламын күчерү",
+  "key.creatoroverlays.display_vvoverlay": "Вертикаль видео капламын күчерү",
+  "key.creatoroverlays.display_tpoverlay": "Күзәтеп бару нокталары капламын күчерү",
+  "key.creatoroverlays.co_color": "Түгәрәк капламының төсләре",
+  "key.creatoroverlays.co_rotateup":  "Түгәрәк капламыныңны өскә бору",
+  "key.creatoroverlays.co_rotatedown": "Түгәрәк капламнарының аска бору",
   "key.creatoroverlays.co_up": "Күзәтеп бару ноктасын өскә күчү",
   "key.creatoroverlays.co_down": "Күзәтеп бару ноктасын аска күчү",
   "key.creatoroverlays.co_right": "Күзәтеп бару ноктасын уңга күчү",
